tests/ui/ferrocene/compiler-arguments/upper_c_extra-filename/upper_c_extra-filename_empty.rs
//@ check-fail
//@ compile-flags: -Cextra-filename
//~? ERROR codegen option `extra-filename` requires a string

fn main() {}

// ferrocene-annotations: um_rustc_C_extra_filename
